code refactor,add: tests